still trying to fix overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway|Roboto|Playfair+Display&display=swap');
 
 .pageContainer {
-  /* background: #edf3f2;
-  background: linear-gradient(107deg, rgba(237,243,242,1) 20%, rgba(255,255,255,1) 50%, rgba(237,243,242,1) 80%); */
+  background: #edf3f2;
+  background: linear-gradient(107deg, rgba(237,243,242,1) 20%, rgba(255,255,255,1) 50%, rgba(237,243,242,1) 80%);
   z-index: 20;
   width: 89vw;
   margin: 0 0 0 11vw;
